packages/svelte/tests/compiler-errors/samples/css/_config.js
import { test } from '../../test';

export default test({
	error: {
		code: 'invalid-css-identifier',
		message: '"{" is expected',
		position: [24, 24]
	}
});
